[gd_scene load_steps=22 format=2]

[ext_resource path="res://Fonts/CourierPrime/CourierPrime-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/CourierPrime/CourierPrime-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ShitScripts/Menu.gd" type="Script" id=3]
[ext_resource path="res://ShitScripts/MenuButtons.gd" type="Script" id=4]
[ext_resource path="res://Objects/1SetFullscreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://Images/Tool.png" type="Texture" id=6]
[ext_resource path="res://Images/ToolHover.png" type="Texture" id=7]
[ext_resource path="res://ShitScripts/MenuConfigButton.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "ShowingText"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("T:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0 )
anti_aliasing = false

[sub_resource type="DynamicFont" id=6]
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 1 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 0 )
anti_aliasing = false

[sub_resource type="DynamicFont" id=10]
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=12]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("R:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=13]
tracks/0/type = "value"
tracks/0/path = NodePath("R:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SetFullscreen" parent="." instance=ExtResource( 5 )]

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="T" type="Label" parent="Title"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Nick's Tower"
align = 1
valign = 1
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimPlayer" type="AnimationPlayer" parent="Title"]
autoplay = "ShowingText"
anims/ShowingText = SubResource( 2 )

[node name="Buttons" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Buttons"]
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 0.6
focus_mode = 0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "JOGAR"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
next_scene = "res://Scenes/Fases.tscn"

[node name="Credits" type="Button" parent="Buttons"]
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 0.4
margin_top = -19.0
focus_mode = 0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "CRÉDITOS"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
next_scene = "res://Scenes/Credits.tscn"

[node name="Config" type="TextureButton" parent="Buttons"]
anchor_left = 0.99993
anchor_top = 1.0
anchor_right = 0.99993
anchor_bottom = 1.0
margin_left = -45.928
margin_top = -44.0001
margin_right = 0.0720215
margin_bottom = -6.10352e-05
focus_mode = 0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 5
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": true
}
next_scene = "res://Scenes/Config.tscn"

[node name="Texts" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="Texts"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "AVISO: Não saia do jogo durante as transições!
Aperte \"ESC\" (nessa tela) para sair."
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R" type="ColorRect" parent="Fade"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimPlayer" type="AnimationPlayer" parent="Fade"]
autoplay = "FadeOut"
anims/FadeIn = SubResource( 12 )
anims/FadeOut = SubResource( 13 )
[connection signal="pressed" from="Buttons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Buttons/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Buttons/Config" to="." method="_on_Config_pressed"]
[connection signal="animation_finished" from="Fade/AnimPlayer" to="." method="_on_AnimPlayer_animation_finished"]
